# docs/swagger.json
@@ -5,36 +5,6 @@
     },
     "paths": {
         "/beers": {
-            "get": {
-                "description": "Get a list of all beers",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Beers"
-                ],
-                "summary": "Get a list of all beers",
-                "responses": {
-                    "200": {
-                        "description": "Successful operation",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/controllers.BeerResponse"
-                            }
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/controllers.BeerErrorResponse"
-                        }
-                    }
-                }
-            },
             "post": {
                 "description": "Create a new beer",
                 "consumes": [
@@ -67,6 +37,38 @@
                     },
                     "400": {
                         "description": "Ensure input is correct!",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.BeerErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/beers/": {
+            "get": {
+                "description": "Get a list of all beers",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Beers"
+                ],
+                "summary": "Get a list of all beers",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/controllers.BeerResponse"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/controllers.BeerErrorResponse"
                         }
